# kwindowsystem

./: .git-blame-ignore-revs  .gitignore  .gitlab-ci.yml  .kde-ci.yml  .reviewboardrc  CMakeLists.txt  KF5WindowSystemConfig.cmake.in  KF6WindowSystemConfig.cmake.in  README.md  conanfile.py  metainfo.yaml
autotests/: CMakeLists.txt  compositingenabled_test.cpp  dontcrashmapviewport.cpp  fixx11h_test.cpp  fixx11h_test2.cpp  kkeyserver_x11_unittest.cpp  kmanagerselectiontest.cpp  kmanagerselectiontest.h  kstartupinfo_unittest.cpp  kwindoweffectstest.cpp  kwindowinfox11test.cpp  kwindowsystem_platform_wayland_test.cpp  kwindowsystem_threadtest.cpp  kwindowsystemx11test.cpp  kxmessages_unittest.cpp  netrootinfotestwm.cpp  nettesthelper.h  netwininfotestclient.cpp  netwininfotestwm.cpp
autotests/helper/: CMakeLists.txt  wayland_platform.cpp
docs/: Doxyfile.local
idletime/: CMakeLists.txt  poller.cpp  poller.h
kmodifierkeyinfoprovider/: CMakeLists.txt  kmodifierkeyinfoprovider_wayland.cpp  kmodifierkeyinfoprovider_wayland.h
po/af/: kwindowsystem5_qt.po
po/ar/: kwindowsystem5_qt.po
po/as/: kwindowsystem5_qt.po
po/ast/: kwindowsystem5_qt.po
po/az/: kwindowsystem5_qt.po
po/be/: kwindowsystem5_qt.po
po/be@latin/: kwindowsystem5_qt.po
po/bg/: kwindowsystem5_qt.po
po/bn/: kwindowsystem5_qt.po
po/bn_IN/: kwindowsystem5_qt.po
po/br/: kwindowsystem5_qt.po
po/bs/: kwindowsystem5_qt.po
po/ca/: kwindowsystem5_qt.po
po/ca@valencia/: kwindowsystem5_qt.po
po/crh/: kwindowsystem5_qt.po
po/cs/: kwindowsystem5_qt.po
po/csb/: kwindowsystem5_qt.po
po/cy/: kwindowsystem5_qt.po
po/da/: kwindowsystem5_qt.po
po/de/: kwindowsystem5_qt.po
po/el/: kwindowsystem5_qt.po
po/en_GB/: kwindowsystem5_qt.po
po/eo/: kwindowsystem5_qt.po
po/es/: kwindowsystem5_qt.po
po/et/: kwindowsystem5_qt.po
po/eu/: kwindowsystem5_qt.po
po/fa/: kwindowsystem5_qt.po
po/fi/: kwindowsystem5_qt.po
po/fr/: kwindowsystem5_qt.po
po/fy/: kwindowsystem5_qt.po
po/ga/: kwindowsystem5_qt.po
po/gd/: kwindowsystem5_qt.po
po/gl/: kwindowsystem5_qt.po
po/gu/: kwindowsystem5_qt.po
po/ha/: kwindowsystem5_qt.po
po/he/: kwindowsystem5_qt.po
po/hi/: kwindowsystem5_qt.po
po/hne/: kwindowsystem5_qt.po
po/hr/: kwindowsystem5_qt.po
po/hsb/: kwindowsystem5_qt.po
po/hu/: kwindowsystem5_qt.po
po/hy/: kwindowsystem5_qt.po
po/ia/: kwindowsystem5_qt.po
po/id/: kwindowsystem5_qt.po
po/is/: kwindowsystem5_qt.po
po/it/: kwindowsystem5_qt.po
po/ja/: kwindowsystem5_qt.po
po/ka/: kwindowsystem5_qt.po
po/kk/: kwindowsystem5_qt.po
po/km/: kwindowsystem5_qt.po
po/kn/: kwindowsystem5_qt.po
po/ko/: kwindowsystem5_qt.po
po/ku/: kwindowsystem5_qt.po
po/lb/: kwindowsystem5_qt.po
po/lt/: kwindowsystem5_qt.po
po/lv/: kwindowsystem5_qt.po
po/mai/: kwindowsystem5_qt.po
po/mk/: kwindowsystem5_qt.po
po/ml/: kwindowsystem5_qt.po
po/mr/: kwindowsystem5_qt.po
po/ms/: kwindowsystem5_qt.po
po/nb/: kwindowsystem5_qt.po
po/nds/: kwindowsystem5_qt.po
po/ne/: kwindowsystem5_qt.po
po/nl/: kwindowsystem5_qt.po
po/nn/: kwindowsystem5_qt.po
po/oc/: kwindowsystem5_qt.po
po/or/: kwindowsystem5_qt.po
po/pa/: kwindowsystem5_qt.po
po/pl/: kwindowsystem5_qt.po
po/ps/: kwindowsystem5_qt.po
po/pt/: kwindowsystem5_qt.po
po/pt_BR/: kwindowsystem5_qt.po
po/ro/: kwindowsystem5_qt.po
po/ru/: kwindowsystem5_qt.po
po/se/: kwindowsystem5_qt.po
po/si/: kwindowsystem5_qt.po
po/sk/: kwindowsystem5_qt.po
po/sl/: kwindowsystem5_qt.po
po/sq/: kwindowsystem5_qt.po
po/sr/: kwindowsystem5_qt.po
po/sr@ijekavian/: kwindowsystem5_qt.po
po/sr@ijekavianlatin/: kwindowsystem5_qt.po
po/sr@latin/: kwindowsystem5_qt.po
po/sv/: kwindowsystem5_qt.po
po/ta/: kwindowsystem5_qt.po
po/te/: kwindowsystem5_qt.po
po/tg/: kwindowsystem5_qt.po
po/th/: kwindowsystem5_qt.po
po/tr/: kwindowsystem5_qt.po
po/tt/: kwindowsystem5_qt.po
po/ug/: kwindowsystem5_qt.po
po/uk/: kwindowsystem5_qt.po
po/uz/: kwindowsystem5_qt.po
po/uz@cyrillic/: kwindowsystem5_qt.po
po/vi/: kwindowsystem5_qt.po
po/wa/: kwindowsystem5_qt.po
po/x-test/: kwindowsystem5_qt.po
po/xh/: kwindowsystem5_qt.po
po/zh_CN/: kwindowsystem5_qt.po
po/zh_HK/: kwindowsystem5_qt.po
po/zh_TW/: kwindowsystem5_qt.po
poqm/af/: kwindowsystem5_qt.po  kwindowsystem6_qt.po
poqm/ar/: kwindowsystem5_qt.po  kwindowsystem6_qt.po
poqm/as/: kwindowsystem5_qt.po  kwindowsystem6_qt.po
poqm/ast/: kwindowsystem5_qt.po  kwindowsystem6_qt.po
poqm/az/: kwindowsystem5_qt.po  kwindowsystem6_qt.po
poqm/be/: kwindowsystem5_qt.po  kwindowsystem6_qt.po
poqm/be@latin/: kwindowsystem5_qt.po  kwindowsystem6_qt.po
poqm/bg/: kwindowsystem5_qt.po  kwindowsystem6_qt.po
poqm/bn/: kwindowsystem5_qt.po  kwindowsystem6_qt.po
poqm/bn_IN/: kwindowsystem5_qt.po  kwindowsystem6_qt.po
src/: CMakeLists.txt  Messages.sh  config-kwindowsystem.h.cmake  cptr_p.h  debug_p.cpp  debug_p.h  kkeyserver.cpp  kkeyserver.h  kkeyserver_mac.cpp  kkeyserver_mac.h  kkeyserver_x11.cpp  kmanagerselection.cpp  kmanagerselection.h  kselectionowner.cpp  kselectionowner.h  kselectionwatcher.cpp  kselectionwatcher.h  kstartupinfo.cpp  kstartupinfo.h  kusertimestamp.cpp  kusertimestamp.h  kwaylandextras.cpp  kwaylandextras.h  kwindoweffects.cpp  kwindoweffects.h  kwindoweffects_dummy.cpp  kwindoweffects_dummy_p.h  kwindoweffects_p.h  kwindoweffects_x11.cpp  kwindowinfo.cpp  kwindowinfo.h  kwindowinfo_dummy_p.h  kwindowinfo_mac.cpp  kwindowinfo_p.h  kwindowinfo_p_x11.h  kwindowinfo_win.cpp  kwindowinfo_x11.cpp  kwindowshadow.cpp  kwindowshadow.h  kwindowshadow_dummy_p.h  (+31 more)
src/qml/: CMakeLists.txt  kwindowsystemplugin.cpp  kwindowsystemplugin.h  types.h
src/qml/examples/: compositingActive.qml  forceActiveWindow.qml  platform.qml  showingDesktop.qml
test_package/: CMakeLists.txt  conanfile.py  main.cpp
tests/: CMakeLists.txt  activationtest.cpp  backgroundcontrasttest.cpp  blurbehindtest.cpp  createpixmapfromhandletest.cpp  icontest.cpp  kwaylandextrastest.cpp  kwaylandextrastest.ui  setmainwindowtest.cpp  shadowtest.cpp
(+274 files in other folders)
